test_scores/negative_dimers/features/P33993.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P33993.pkl.xz